--- a/sass/main.scss
+++ b/sass/main.scss
@@ -110,6 +110,9 @@ $instagram: #396d9a !default;
 .brand-brown-gray {
   color: $brand-brown-gray;
 }
+.brand-gray {
+  color: $brand-gray;
+}
 .brand-yellow {
   color: $brand-yellow;
 }
@@ -242,207 +245,215 @@ $instagram: #396d9a !default;
   }
 }
 .sk-fading-circle {
-    margin: 0px auto 20px;
-    width: 40px;
-    height: 40px;
-    position: relative;
+  margin: 0 auto 20px;
+  width: 40px;
+  height: 40px;
+  position: relative;
 }
 .sk-fading-circle .sk-circle {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 .sk-fading-circle .sk-circle:before {
-    content: '';
-    display: block;
-    margin: 0 auto;
-    width: 15%;
-    height: 15%;
-    background-color: #333;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    border-radius: 100%;
-    -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
-    -moz-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
-    -o-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
-    animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+  content: '';
+  display: block;
+  margin: 0 auto;
+  width: 15%;
+  height: 15%;
+  background-color: #333;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  border-radius: 100%;
+  -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+  -moz-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+  -o-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+  animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
 }
 .sk-fading-circle .sk-circle2 {
-    -webkit-transform: rotate(30deg);
-    -ms-transform: rotate(30deg);
-    -moz-transform: rotate(30deg);
-    -o-transform: rotate(30deg);
-    transform: rotate(30deg);
+  -webkit-transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  -moz-transform: rotate(30deg);
+  -o-transform: rotate(30deg);
+  transform: rotate(30deg);
 }
 .sk-fading-circle .sk-circle3 {
-    -webkit-transform: rotate(60deg);
-    -ms-transform: rotate(60deg);
-    -moz-transform: rotate(60deg);
-    -o-transform: rotate(60deg);
-    transform: rotate(60deg);
+  -webkit-transform: rotate(60deg);
+  -ms-transform: rotate(60deg);
+  -moz-transform: rotate(60deg);
+  -o-transform: rotate(60deg);
+  transform: rotate(60deg);
 }
 .sk-fading-circle .sk-circle4 {
-    -webkit-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 .sk-fading-circle .sk-circle5 {
-    -webkit-transform: rotate(120deg);
-    -ms-transform: rotate(120deg);
-    -moz-transform: rotate(120deg);
-    -o-transform: rotate(120deg);
-    transform: rotate(120deg);
+  -webkit-transform: rotate(120deg);
+  -ms-transform: rotate(120deg);
+  -moz-transform: rotate(120deg);
+  -o-transform: rotate(120deg);
+  transform: rotate(120deg);
 }
 .sk-fading-circle .sk-circle6 {
-    -webkit-transform: rotate(150deg);
-    -ms-transform: rotate(150deg);
-    -moz-transform: rotate(150deg);
-    -o-transform: rotate(150deg);
-    transform: rotate(150deg);
+  -webkit-transform: rotate(150deg);
+  -ms-transform: rotate(150deg);
+  -moz-transform: rotate(150deg);
+  -o-transform: rotate(150deg);
+  transform: rotate(150deg);
 }
 .sk-fading-circle .sk-circle7 {
-    -webkit-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 .sk-fading-circle .sk-circle8 {
-    -webkit-transform: rotate(210deg);
-    -ms-transform: rotate(210deg);
-    -moz-transform: rotate(210deg);
-    -o-transform: rotate(210deg);
-    transform: rotate(210deg);
+  -webkit-transform: rotate(210deg);
+  -ms-transform: rotate(210deg);
+  -moz-transform: rotate(210deg);
+  -o-transform: rotate(210deg);
+  transform: rotate(210deg);
 }
 .sk-fading-circle .sk-circle9 {
-    -webkit-transform: rotate(240deg);
-    -ms-transform: rotate(240deg);
-    -moz-transform: rotate(240deg);
-    -o-transform: rotate(240deg);
-    transform: rotate(240deg);
+  -webkit-transform: rotate(240deg);
+  -ms-transform: rotate(240deg);
+  -moz-transform: rotate(240deg);
+  -o-transform: rotate(240deg);
+  transform: rotate(240deg);
 }
 .sk-fading-circle .sk-circle10 {
-    -webkit-transform: rotate(270deg);
-    -ms-transform: rotate(270deg);
-    -moz-transform: rotate(270deg);
-    -o-transform: rotate(270deg);
-    transform: rotate(270deg);
+  -webkit-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  -moz-transform: rotate(270deg);
+  -o-transform: rotate(270deg);
+  transform: rotate(270deg);
 }
 .sk-fading-circle .sk-circle11 {
-    -webkit-transform: rotate(300deg);
-    -ms-transform: rotate(300deg);
-    -moz-transform: rotate(300deg);
-    -o-transform: rotate(300deg);
-    transform: rotate(300deg);
+  -webkit-transform: rotate(300deg);
+  -ms-transform: rotate(300deg);
+  -moz-transform: rotate(300deg);
+  -o-transform: rotate(300deg);
+  transform: rotate(300deg);
 }
 .sk-fading-circle .sk-circle12 {
-    -webkit-transform: rotate(330deg);
-    -ms-transform: rotate(330deg);
-    -moz-transform: rotate(330deg);
-    -o-transform: rotate(330deg);
-    transform: rotate(330deg);
+  -webkit-transform: rotate(330deg);
+  -ms-transform: rotate(330deg);
+  -moz-transform: rotate(330deg);
+  -o-transform: rotate(330deg);
+  transform: rotate(330deg);
 }
 .sk-fading-circle .sk-circle2:before {
-    -webkit-animation-delay: -1.1s;
-    -moz-animation-delay: -1.1s;
-    -o-animation-delay: -1.1s;
-    animation-delay: -1.1s;
+  -webkit-animation-delay: -1.1s;
+  -moz-animation-delay: -1.1s;
+  -o-animation-delay: -1.1s;
+  animation-delay: -1.1s;
 }
 .sk-fading-circle .sk-circle3:before {
-    -webkit-animation-delay: -1s;
-    -moz-animation-delay: -1s;
-    -o-animation-delay: -1s;
-    animation-delay: -1s;
+  -webkit-animation-delay: -1s;
+  -moz-animation-delay: -1s;
+  -o-animation-delay: -1s;
+  animation-delay: -1s;
 }
 .sk-fading-circle .sk-circle4:before {
-    -webkit-animation-delay: -0.9s;
-    -moz-animation-delay: -0.9s;
-    -o-animation-delay: -0.9s;
-    animation-delay: -0.9s;
+  -webkit-animation-delay: -0.9s;
+  -moz-animation-delay: -0.9s;
+  -o-animation-delay: -0.9s;
+  animation-delay: -0.9s;
 }
 .sk-fading-circle .sk-circle5:before {
-    -webkit-animation-delay: -0.8s;
-    -moz-animation-delay: -0.8s;
-    -o-animation-delay: -0.8s;
-    animation-delay: -0.8s;
+  -webkit-animation-delay: -0.8s;
+  -moz-animation-delay: -0.8s;
+  -o-animation-delay: -0.8s;
+  animation-delay: -0.8s;
 }
 .sk-fading-circle .sk-circle6:before {
-    -webkit-animation-delay: -0.7s;
-    -moz-animation-delay: -0.7s;
-    -o-animation-delay: -0.7s;
-    animation-delay: -0.7s;
+  -webkit-animation-delay: -0.7s;
+  -moz-animation-delay: -0.7s;
+  -o-animation-delay: -0.7s;
+  animation-delay: -0.7s;
 }
 .sk-fading-circle .sk-circle7:before {
-    -webkit-animation-delay: -0.6s;
-    -moz-animation-delay: -0.6s;
-    -o-animation-delay: -0.6s;
-    animation-delay: -0.6s;
+  -webkit-animation-delay: -0.6s;
+  -moz-animation-delay: -0.6s;
+  -o-animation-delay: -0.6s;
+  animation-delay: -0.6s;
 }
 .sk-fading-circle .sk-circle8:before {
-    -webkit-animation-delay: -0.5s;
-    -moz-animation-delay: -0.5s;
-    -o-animation-delay: -0.5s;
-    animation-delay: -0.5s;
+  -webkit-animation-delay: -0.5s;
+  -moz-animation-delay: -0.5s;
+  -o-animation-delay: -0.5s;
+  animation-delay: -0.5s;
 }
 .sk-fading-circle .sk-circle9:before {
-    -webkit-animation-delay: -0.4s;
-    -moz-animation-delay: -0.4s;
-    -o-animation-delay: -0.4s;
-    animation-delay: -0.4s;
+  -webkit-animation-delay: -0.4s;
+  -moz-animation-delay: -0.4s;
+  -o-animation-delay: -0.4s;
+  animation-delay: -0.4s;
 }
 .sk-fading-circle .sk-circle10:before {
-    -webkit-animation-delay: -0.3s;
-    -moz-animation-delay: -0.3s;
-    -o-animation-delay: -0.3s;
-    animation-delay: -0.3s;
+  -webkit-animation-delay: -0.3s;
+  -moz-animation-delay: -0.3s;
+  -o-animation-delay: -0.3s;
+  animation-delay: -0.3s;
 }
 .sk-fading-circle .sk-circle11:before {
-    -webkit-animation-delay: -0.2s;
-    -moz-animation-delay: -0.2s;
-    -o-animation-delay: -0.2s;
-    animation-delay: -0.2s;
+  -webkit-animation-delay: -0.2s;
+  -moz-animation-delay: -0.2s;
+  -o-animation-delay: -0.2s;
+  animation-delay: -0.2s;
 }
 .sk-fading-circle .sk-circle12:before {
-    -webkit-animation-delay: -0.1s;
-    -moz-animation-delay: -0.1s;
-    -o-animation-delay: -0.1s;
-    animation-delay: -0.1s;
+  -webkit-animation-delay: -0.1s;
+  -moz-animation-delay: -0.1s;
+  -o-animation-delay: -0.1s;
+  animation-delay: -0.1s;
 }
 @-webkit-keyframes sk-circleFadeDelay {
-    0%, 39%, 100% {
-        opacity: 0;
-    }
-    40% {
-        opacity: 1;
-    }
+  0%,
+  39%,
+  100% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
 }
 @-moz-keyframes sk-circleFadeDelay {
-    0%, 39%, 100% {
-        opacity: 0;
-    }
-    40% {
-        opacity: 1;
-    }
+  0%,
+  39%,
+  100% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
 }
 @-o-keyframes sk-circleFadeDelay {
-    0%, 39%, 100% {
-        opacity: 0;
-    }
-    40% {
-        opacity: 1;
-    }
+  0%,
+  39%,
+  100% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
 }
 @keyframes sk-circleFadeDelay {
-    0%, 39%, 100% {
-        opacity: 0;
-    }
-    40% {
-        opacity: 1;
-    }
+  0%,
+  39%,
+  100% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
 }
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
 @mixin placeholder {
@@ -958,7 +969,9 @@ button {
 .health-descp {
   font-size: 16px;
 }
-.no-plan { min-height: 200px; }
+.no-plan {
+  min-height: 200px;
+}
 .healthchart-list {
   margin: 60px 0;
 }
@@ -1008,7 +1021,7 @@ button {
     top: -25px;
     left: 50%;
     background-color: #fff;
-    font-size: 30px;
+    font-size: 19px;
     line-height: 40px;
     text-align: center;
     @include transform(translateX(-50%));
@@ -1478,7 +1491,7 @@ button {
     @include square(40px);
     i {
       font-size: 18px;
-      padding: 12px 0px;
+      padding: 12px 0;
     }
   }
 }
@@ -1565,7 +1578,9 @@ button {
       }
     }
   }
-  .plan-cart { height: 273px !important; }
+  .plan-cart {
+    height: 273px !important;
+  }
   .coupon {
     padding: 10px;
     border-top: 1px solid $brand-primary;
@@ -1838,7 +1853,9 @@ footer {
   }
   .product-tab-detail {
     margin: 30px 0 0;
-    ul li { list-style-type: inherit; }
+    ul li {
+      list-style-type: inherit;
+    }
   }
   ul.nav-tabs {
     @include margin(0 100px 0 0);
@@ -2341,25 +2358,45 @@ footer {
 ////recipe//
 .recipedetail-slider {
   width: 1060px;
-  margin: 50px auto;
-  .flex-slider {
-    border: none;
-    margin: 0;
+  margin: 50px auto 0;
+  .flexslider {
+    .flex-direction-nav a { height: auto; }
+  .flex-direction-nav .flex-prev{
+      &:before {
+        content: "\f104";
+        font: normal normal normal 14px/1 FontAwesome;
+        font-size: 70px;
+      }
+    }
+  .flex-direction-nav .flex-next{
+      &:before {
+        content: "\f105";
+        font: normal normal normal 14px/1 FontAwesome;
+        font-size: 70px;
+      }
+    }
   }
+}
+.recipedetail-content {
+  margin: 30px 70px 0;
+  font-size: 16px;
+  p { margin: 15px 0; }
 }
 .recipedetail-imgholder {
   width: 300px;
   height: 500px;
   @extend .m-center;
-  img { border-radius: 30px; }
+  img {
+    border-radius: 30px;
+  }
 }
 .recipe-name {
   width: 100%;
-  padding: 20px 0;
+  padding: 20px;
   position: absolute;
   bottom: 50px;
   background-color: rgba(255,255,255,0.9);
-  font-size: 22px;
+  font-size: 20px;
 }
 .recipes-main {
   margin: 60px 0;
@@ -2375,6 +2412,8 @@ footer {
 .recipe-slider {
   width: 200px;
   margin: 20px auto;
+}
+.slider-customize {
   .flexslider {
     border: none;
     margin: 0;
@@ -2510,7 +2549,7 @@ footer {
   }
   .age {
     width: 55px;
-    padding: 0px 5px;
+    padding: 0 5px;
     border: 2px solid $brand-primary;
   }
   .weight {
@@ -2639,11 +2678,13 @@ footer {
 .careers-main {
   margin: 80px 0;
   h2 {
-    margin: 20px 0px 50px;
+    margin: 20px 0 50px;
     color: $brand-gray;
     font-size: 35px;
   }
-  textarea { min-height: 100px; }
+  textarea {
+    min-height: 100px;
+  }
   .send {
     margin: 20px 0;
     padding: 8px 36px;
@@ -2782,13 +2823,19 @@ footer {
 }
 // forgot and  pop-up
 .enter-mail {
-  h2 {  padding: 20px 0;  }
+  h2 {
+    padding: 20px 0;
+  }
   h3 {
     margin: 30px;
     line-height: 28px;
   }
-  form.forgot-form { padding: 0px 20px 30px; }
-  button { padding: 8px 30px; }
+  form.forgot-form {
+    padding: 0 20px 30px;
+  }
+  button {
+    padding: 8px 30px;
+  }
 }
 .input-placeholder {
   border: 2px solid $brand-primary;
@@ -2802,7 +2849,9 @@ footer {
 .forgot-main {
   @extend .enter-mail;
   margin: 50px 0;
-  label { font-size: 16px; }
+  label {
+    font-size: 16px;
+  }
 }
 // end forgot and popup
 @import "harsh";
