--- a/views/content/forgotpassword.html
+++ b/views/content/forgotpassword.html
@@ -13,7 +13,7 @@
             <div class="form-group">
               <label for="newpassword" class="text-uppercase letter-space">Enter new password</label>
               <input name="newpswd" required type="password" class="form-control input-placeholder" id="newpassword">
-              <div class="" ng-show="forgot.newpswd.$invalid && forgot.newpswd.$touched" role="alert"> 
+              <div class="" ng-show="forgot.newpswd.$error.required && forgot.newpswd.$touched" role="alert">
                 Please Enter The Password.
               </div>
             </div>
