--- a/views/content/recipedetail.html
+++ b/views/content/recipedetail.html
@@ -17,7 +17,7 @@
           <div class="recipe-imgholder ">
             <img src="img/recipes/baingan.jpg" alt="" class="round img-responsive">
           </div>
-          <div class="recipe-slider">
+          <div class="recipe-slider slider-customize">
             <flex-slider class="carousel" flex-slide="slide in recipe track by $index" animation="slide" item-width="90" item-margin="15" Control-Nav="false">
               <li>
                 <div class="recipe-category ">
