--- a/views/header.html
+++ b/views/header.html
@@ -52,11 +52,11 @@
               <a href="#/cart"><i class="fa fa-shopping-cart brand-primary"></i></a>
               <div class="bagde round"><span class="white">15</span></div>
             </div>
-            <div class="user-login">
-              <div class="signin letter-space text-right" ng-show="!enablelogout">
+            <div class="user-login text-center">
+              <div class="signin letter-space" ng-show="!enablelogout">
                 <a class="text-uppercase font-semibold" href="" ng-click="openLogin();">Sign In</a>
               </div>
-              <div class="signin letter-space text-right" ng-show="enablelogout">
+              <div class="signin letter-space" ng-show="enablelogout">
                 <div class="text-uppercase font-semibold relate pointer show-submenu">
                   <span class="block name brand-primary ">Jagruti</span>
                   <ul class="account-submenu">
