--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2203,9 +2203,10 @@ footer {
   .blog-detail {
     margin: 20px 0 0;
     .blog-descp {
-      min-height: 110px;
+      height: 110px;
       margin: 25px 0;
       font-size: 16px;
+      overflow: hidden;
     }
     .read-more {
       border-bottom: 1px solid $brand-primary;
