--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -1361,6 +1361,8 @@
 .recipedetail-slider { width: 350px; }
 .recipe-main-title { font-size: 22px; }
 .recipedetail-content { margin: 30px 30px 0; }
+///account-name
+.account-tab .nav-tabs li { font-size: 20px; }
 }
 @media (max-width: 480px) {
   // login
@@ -1998,4 +2000,6 @@
          }
       }
     }
+    ///account-name
+    .account-tab .nav-tabs li { font-size: 18px; }
 }
