--- a/views/content/careers.html
+++ b/views/content/careers.html
@@ -10,7 +10,7 @@
           <h2 class="text-center">If you wish to join the Selfcare team, please fill in the following details</h2>
         </div>
       </div>
-    <form action="">
+    <form name="career">
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
@@ -19,7 +19,10 @@
         </div>
         <div class="col-md-6">
           <div class="form-group">
-            <input type="email" class="form-control input-placeholder" placeholder="Email *">
+            <input name="careermail" required ng-model="email" type="email" class="form-control input-placeholder" placeholder="Email *">
+            <div class="" ng-show="career.careermail.$error.required && career.careermail.$touched">
+              Please Enter Your Email Id.
+            </div>
           </div>
         </div>
       </div>
@@ -51,6 +54,9 @@
         <button class="btn btn-primary send text-uppercase letter-space">send</button>
       </div>
     </form>
+    <div class="">
+      <h3 class="block brand-brown-dark">Welcome To The Selfcare Team.</h3>
+    </div>
   </div>
 </div>
 </section>
