changes for the cart point page

--- a/views/header.html
+++ b/views/header.html
@@ -49,8 +49,9 @@
               <a class="font-semibold" href="tel:+912261312222">+91 22 6131 2222</a>
             </div>
             <div class="cart-icon relate">
-              <a href="#/cart"><i class="fa fa-shopping-cart brand-primary"></i></a>
-              <div class="bagde round"><span class="white">15</span></div>
+              <a href="#/cart"><i class="fa fa-shopping-cart brand-primary"></i>
+              <div class="bagde round"><span class="white" ng-bind="badgeCount"></span></div>
+              </a>
             </div>
             <div class="user-login text-center">
               <div class="signin letter-space" ng-show="!enablelogout">
