--- a/views/modal/forgotpopup.html
+++ b/views/modal/forgotpopup.html
@@ -19,6 +19,6 @@
     </div>
   </div>
 </div>
-<div class="" ng-show="forgotDone">
-  Email sent successfully
+<div class="" ng-show="forgotDone" style="padding:20%;text-align:center;">
+    Email sent sucessfully.
 </div>
