--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -620,7 +620,7 @@
   .product-detail {
     text-align: center;
     h3 {
-      margin: 18px 0;
+      margin: 0 0 18px;
       font-size: 20px;
     }
     .prd-price { font-size: 20px; }
@@ -1833,7 +1833,7 @@
       }
   }
     h3 {
-      margin: 10px 0;
+      margin: 0 0 10px;
       font-size: 16px;
     }
     .prd-price {
